<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ToolBarTheme"
        app:popupTheme="@style/AppTheme"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etlEMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginStart="-4dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/transparent87"
            android:textSize="16sp"
            android:singleLine="true"
            android:hint="@string/your_e_mail"
            android:textColorHint="@color/transparent38"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etlCEMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etCEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginStart="-4dp"
            android:textColor="@color/transparent87"
            android:textSize="16sp"
            android:singleLine="true"
            android:hint="@string/confirm_your_e_mail"
            android:textColorHint="@color/transparent38"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etlSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginStart="-4dp"
            android:text="@string/subject_default"
            android:textColor="@color/transparent87"
            android:textSize="16sp"
            android:inputType="text|textCapSentences"
            android:singleLine="true"
            android:hint="@string/subject_hint"
            android:textColorHint="@color/transparent38"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etlBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:layout_marginLeft="-4dp"
            android:layout_marginStart="-4dp"
            android:textColor="@color/transparent87"
            android:textSize="16sp"
            android:inputType="text|textMultiLine|textCapSentences"
            android:singleLine="true"
            android:hint="@string/body_hint"
            android:textColorHint="@color/transparent38"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/readme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/did_read"
        android:textSize="16sp"
        android:textColor="@color/transparent87"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:minWidth="80dp"
        android:layout_height="wrap_content"
        android:minHeight="52dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/send_e_mail"
        android:textColor="@color/transparent87"
        android:textSize="14sp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"/>

</LinearLayout>
