<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ToolBarTheme"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etlTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="25">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginStart="-4dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:inputType="text|textCapSentences"
                    android:singleLine="true"
                    android:hint="@string/title"
                    android:textColorHint="@color/transparent38"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/due_date"
                android:textSize="16sp"
                android:paddingTop="16dp"
                android:textColor="@color/transparent87"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etlDD"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:hintEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etDD"
                        android:layout_width="match_parent"
                        android:minWidth="48dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginLeft="-4dp"
                        android:layout_marginStart="-4dp"
                        android:layout_marginBottom="4dp"
                        android:textSize="16sp"
                        android:hint="@string/dd"
                        android:singleLine="true"
                        android:textColorHint="@color/transparent38"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textSize="16sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/transparent54"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etlMM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:hintEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etMM"
                        android:layout_width="match_parent"
                        android:minWidth="48dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="4dp"
                        android:textSize="16sp"
                        android:hint="@string/mm"
                        android:singleLine="true"
                        android:textColorHint="@color/transparent38"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textSize="16sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/transparent54"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etlYYYY"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:hintEnabled="false">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etYYYY"
                        android:layout_width="match_parent"
                        android:minWidth="48dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:layout_marginBottom="4dp"
                        android:textSize="16sp"
                        android:hint="@string/yyyy"
                        android:singleLine="true"
                        android:textColorHint="@color/transparent38"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority"
                    android:textSize="16sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:textColor="@color/transparent87"
                    />

                <TextView
                    android:id="@+id/progressText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="16sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="4"
                    android:textColor="@color/transparent87"/>

            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:progress="3"
                android:max="9"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etlDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginStart="-4dp"
                    android:layout_marginBottom="12dp"
                    android:textSize="16sp"
                    android:hint="@string/description_hint"
                    android:singleLine="true"
                    android:textColorHint="@color/transparent38"
                    android:inputType="text|textMultiLine|textCapSentences"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btSave"
                    android:layout_width="wrap_content"
                    android:minWidth="80dp"
                    android:layout_height="wrap_content"
                    android:minHeight="36dp"
                    android:text="@string/save"
                    android:textColor="@color/transparent26"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:background="?attr/selectableItemBackground"
                    android:enabled="false"/>

                <Button
                    android:id="@+id/btDiscard"
                    android:layout_width="wrap_content"
                    android:minWidth="80dp"
                    android:layout_height="wrap_content"
                    android:minHeight="36dp"
                    android:text="@string/discard"
                    android:textColor="@color/transparent87"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:background="?attr/selectableItemBackground"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>