<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:theme="@style/ToolBarTheme"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckedTextView
                android:id="@+id/CTVDueDate"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/due_date"
                android:textSize="16sp"
                android:textColor="@color/transparent87"
                android:checkMark="@drawable/selector_checkbox"
                android:checked="false"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/transparent12"
                />

            <CheckedTextView
                android:id="@+id/CTVCreationDate"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/creation_date"
                android:textSize="16sp"
                android:textColor="@color/transparent87"
                android:checkMark="@drawable/selector_checkbox"
                android:checked="false"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/transparent12"
                />

            <CheckedTextView
                android:id="@+id/CTVPriority"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/priority"
                android:textSize="16sp"
                android:textColor="@color/transparent87"
                android:checkMark="@drawable/selector_checkbox"
                android:checked="false"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/transparent12"
                />

            <CheckedTextView
                android:id="@+id/CTVTitle"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/title"
                android:textSize="16sp"
                android:textColor="@color/transparent87"
                android:checkMark="@drawable/selector_checkbox"
                android:checked="false"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                />


        </LinearLayout>

    </ScrollView>
</LinearLayout>